сделать форму и попап

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     </header>
     <main class="content">
 
-
         <section class="profile">
             <div class="profile__wrapper">
                 <img src="./image/kusto.jpg" class="profile__avatar" alt="Аватар пользователя">
@@ -41,7 +40,7 @@
             </article>
             <article class="grid-card">
                 <div class="card-background">
-                    <img src="./image/карачаево.1.jpg" class="img-card" alt="Изображение карточки">
+                    <img src="./image/эльбрус.2.png" class="img-card" alt="Изображение карточки">
                     <div class="card-wrapper">
                         <h3 class="card-text">Гора Эльбрус</h3>
                         <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
@@ -50,7 +49,7 @@
             </article>
             <article class="grid-card">
                 <div class="card-background">
-                    <img src="./image/карачаево.1.jpg" class="img-card" alt="Изображение карточки">
+                    <img src="./image/домбай.3.png" class="img-card" alt="Изображение карточки">
                     <div class="card-wrapper">
                         <h3 class="card-text">Домбай</h3>
                         <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
@@ -59,18 +58,18 @@
             </article>
             <article class="grid-card">
                 <div class="card-background">
-                    <img src="./image/карачаево.1.jpg" class="img-card" alt="Изображение карточки">
+                    <img src="./image/домбай.3.png" class="img-card" alt="Изображение карточки">
                     <div class="card-wrapper">
-                        <h3 class="card-text">Гора Эльбрус</h3>
+                        <h3 class="card-text">Москва</h3>
                         <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
             <article class="grid-card">
                 <div class="card-background">
-                    <img src="./image/карачаево.1.jpg" class="img-card" alt="Изображение карточки">
+                    <img src="./image/эльбрус.2.png" class="img-card" alt="Изображение карточки">
                     <div class="card-wrapper">
-                        <h3 class="card-text">Домбай</h3>
+                        <h3 class="card-text">Карелия</h3>
                         <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
@@ -89,7 +88,25 @@
         <footer class="footer">
             <img src="./image/© 2020 Mesto Russia.svg" class="footer__logo" alt="логотип в подвале">
         </footer>
+
+    <div class="popup">
+        <form class="form">
+            <button class="form__close-button" type="button"></button>
+            <fieldset class="form__contact-info">
+                <h2 class="form__title">Редактировать профиль</h2>
+                <div class="form__wrap">
+                    <input type="text" name="name" value="Жак-Ив Кусто" class="form__contact-name">
+                    <input type="text" name="interst" value="Исследователь океана" class="form__contact-interst">
+                    <input type="submit" name="button" value="Сохранить" class="form__submit" >
+                </div>
+            </fieldset>
+        </form>
+    </div>  
+    
+    <script src="./script/index.js"></script>
+
     </main>
+
 </body>
 
 </html>
