--- a/index.html
+++ b/index.html
@@ -28,65 +28,65 @@
         </section>
 
 
-        <section class="grid-cards">
-            <article class="grid-card">
-                <div class="card-background">
-                    <img src="./image/карачаево.1.jpg" class="img-card" alt="Изображение карточки">
-                    <div class="card-wrapper">
-                        <h3 class="card-text">Карачаевск</h3>
-                        <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
+        <section class="grid-card">
+            <article class="grid-card__item">
+                <div class="grid-card__background">
+                    <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
+                    <div class="grid-card__wrapper">
+                        <h3 class="grid-card__text">Карачаевск</h3>
+                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
-            <article class="grid-card">
-                <div class="card-background">
-                    <img src="./image/эльбрус.2.png" class="img-card" alt="Изображение карточки">
-                    <div class="card-wrapper">
-                        <h3 class="card-text">Гора Эльбрус</h3>
-                        <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
+            <article class="grid-card__item">
+                <div class="grid-card__background">
+                    <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
+                    <div class="grid-card__wrapper">
+                        <h3 class="grid-card__text">Гора Эльбрус</h3>
+                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
-            <article class="grid-card">
-                <div class="card-background">
-                    <img src="./image/домбай.3.png" class="img-card" alt="Изображение карточки">
-                    <div class="card-wrapper">
-                        <h3 class="card-text">Домбай</h3>
-                        <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
+            <article class="grid-card__item">
+                <div class="grid-card__background">
+                    <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
+                    <div class="grid-card__wrapper">
+                        <h3 class="grid-card__text">Домбай</h3>
+                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
-            <article class="grid-card">
-                <div class="card-background">
-                    <img src="./image/домбай.3.png" class="img-card" alt="Изображение карточки">
-                    <div class="card-wrapper">
-                        <h3 class="card-text">Москва</h3>
-                        <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
+            <article class="grid-card__item">
+                <div class="grid-card__background">
+                    <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
+                    <div class="grid-card__wrapper">
+                        <h3 class="grid-card__text">Домбай</h3>
+                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
-            <article class="grid-card">
-                <div class="card-background">
-                    <img src="./image/эльбрус.2.png" class="img-card" alt="Изображение карточки">
-                    <div class="card-wrapper">
-                        <h3 class="card-text">Карелия</h3>
-                        <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
+            <article class="grid-card__item">
+                <div class="grid-card__background">
+                    <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
+                    <div class="grid-card__wrapper">
+                        <h3 class="grid-card__text">Гора Эльбрус</h3>
+                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
-            <article class="grid-card">
-                <div class="card-background">
-                    <img src="./image/карачаево.1.jpg" class="img-card" alt="Изображение карточки">
-                    <div class="card-wrapper">
-                        <h3 class="card-text">Карачаево-Черкесия</h3>
-                        <img src="./image/like.svg" class="card-like" alt="кнопка 'мне нравиться'">
+            <article class="grid-card__item">
+                <div class="grid-card__background">
+                    <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
+                    <div class="grid-card__wrapper">
+                        <h3 class="grid-card__text">Карачаевск</h3>
+                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
                     </div>
                 </div>
             </article>
         </section>
 
         <footer class="footer">
-            <img src="./image/© 2020 Mesto Russia.svg" class="footer__logo" alt="логотип в подвале">
+            <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
         </footer>
 
         <div class="popup">
@@ -102,11 +102,8 @@
                 </fieldset>
             </form>
         </div>
-
-        <script src="./script/index.js"></script>
-
     </main>
-
+    <script src="./script/index.js"></script>
 </body>
 
 </html>
