поправить отступы.поправить форму. удалить шрифты

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body class="page">
     <header class="header">
         <img class="header__logo" src="./image/logo.svg" alt="логотип Mesto.Russia">
-        <div class="header__line"></div>
     </header>
     <main class="content">
 
@@ -27,83 +26,79 @@
             <button class="profile__button-add" type="button"></button>
         </section>
 
-
-        <section class="grid-card">
-            <article class="grid-card__item">
-                <div class="grid-card__background">
-                    <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
-                    <div class="grid-card__wrapper">
-                        <h3 class="grid-card__text">Карачаевск</h3>
-                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
-                    </div>
+        <ul class="grid-card">
+            <li class="grid-card__item">
+                <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
+                <div class="grid-card__wrapper">
+                    <h3 class="grid-card__text">Карачаевск</h3>
+                    <button class="grid-card__like" type="button"></button>
                 </div>
-            </article>
-            <article class="grid-card__item">
-                <div class="grid-card__background">
-                    <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
-                    <div class="grid-card__wrapper">
-                        <h3 class="grid-card__text">Гора Эльбрус</h3>
-                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
-                    </div>
                 </div>
-            </article>
-            <article class="grid-card__item">
-                <div class="grid-card__background">
-                    <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
-                    <div class="grid-card__wrapper">
-                        <h3 class="grid-card__text">Домбай</h3>
-                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
-                    </div>
+            </li>
+            <li class="grid-card__item">
+                <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
+                <div class="grid-card__wrapper">
+                    <h3 class="grid-card__text">Гора Эльбрус</h3>
+                    <button class="grid-card__like" type="button"></button>
                 </div>
-            </article>
-            <article class="grid-card__item">
-                <div class="grid-card__background">
-                    <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
-                    <div class="grid-card__wrapper">
-                        <h3 class="grid-card__text">Домбай</h3>
-                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
-                    </div>
                 </div>
-            </article>
-            <article class="grid-card__item">
-                <div class="grid-card__background">
-                    <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
-                    <div class="grid-card__wrapper">
-                        <h3 class="grid-card__text">Гора Эльбрус</h3>
-                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
-                    </div>
+            </li>
+            <li class="grid-card__item">
+                <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
+                <div class="grid-card__wrapper">
+                    <h3 class="grid-card__text">Домбай</h3>
+                    <button class="grid-card__like" type="button"></button>
                 </div>
-            </article>
-            <article class="grid-card__item">
-                <div class="grid-card__background">
-                    <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
-                    <div class="grid-card__wrapper">
-                        <h3 class="grid-card__text">Карачаевск</h3>
-                        <img src="./image/like.svg" class="grid-card__like" alt="кнопка 'мне нравиться'">
-                    </div>
                 </div>
-            </article>
-        </section>
-
-        <footer class="footer">
-            <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
-        </footer>
-
-        <div class="popup">
-            <form class="form">
-                <button class="form__close-button" type="button"></button>
-                <fieldset class="form__contact-info">
-                    <h2 class="form__title">Редактировать профиль</h2>
-                    <div class="form__wrap">
-                        <input type="text" name="name" value="Жак-Ив Кусто" class="form__contact-name">
-                        <input type="text" name="interst" value="Исследователь океана" class="form__contact-interst">
-                        <input type="submit" name="button" value="Сохранить" class="form__submit">
-                    </div>
-                </fieldset>
-            </form>
-        </div>
+            </li>
+            <li class="grid-card__item">
+                <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
+                <div class="grid-card__wrapper">
+                    <h3 class="grid-card__text">Домбай</h3>
+                    <button class="grid-card__like" type="button"></button>
+                </div>
+                </div>
+            </li>
+            <li class="grid-card__item">
+                <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
+                <div class="grid-card__wrapper">
+                    <h3 class="grid-card__text">Гора Эльбрус</h3>
+                    <button class="grid-card__like" type="button"></button>
+                </div>
+                </div>
+            </li>
+            <li class="grid-card__item">
+                <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
+                <div class="grid-card__wrapper">
+                    <h3 class="grid-card__text">Карачаевск</h3>
+                    <button class="grid-card__like" type="button"></button>
+                </div>
+                </div>
+            </li>
+        </ul>
     </main>
+
+    <footer class="footer">
+        <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+    </footer>
+
+    <div class="popup">
+        <div class="popup__container">
+                <button class="form__close-button" type="button"></button>
+        
+            <div class="form__contact-info">
+                <h2 class="form__title">Редактировать профиль</h2>
+                <form class="form">
+                    <input type="text" name="name" value="Жак-Ив Кусто" class="form__contact-name">
+                    <input type="text" name="interst" value="Исследователь океана" class="form__contact-interst">
+                    <button type="submit" class="form__submit">Сохранить</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <script src="./script/index.js"></script>
+
 </body>
 
 </html>
