удалить лишний шрифт.удалить фикс ширину и высоту

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         
             <div class="form__contact-info">
                 <h2 class="form__title">Редактировать профиль</h2>
-                <form class="form">
+                <form class="form" action="#" name="form">
                     <input type="text" name="name" value="Жак-Ив Кусто" class="form__contact-name">
                     <input type="text" name="interst" value="Исследователь океана" class="form__contact-interst">
                     <button type="submit" class="form__submit">Сохранить</button>
