--- a/index.html
+++ b/index.html
@@ -27,54 +27,6 @@
         </section>
 
         <ul class="grid-card">
-            <li class="grid-card__item">
-                <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
-                <div class="grid-card__wrapper">
-                    <h3 class="grid-card__text">Карачаевск</h3>
-                    <button class="grid-card__like" type="button"></button>
-                </div>
-                </div>
-            </li>
-            <li class="grid-card__item">
-                <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
-                <div class="grid-card__wrapper">
-                    <h3 class="grid-card__text">Гора Эльбрус</h3>
-                    <button class="grid-card__like" type="button"></button>
-                </div>
-                </div>
-            </li>
-            <li class="grid-card__item">
-                <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
-                <div class="grid-card__wrapper">
-                    <h3 class="grid-card__text">Домбай</h3>
-                    <button class="grid-card__like" type="button"></button>
-                </div>
-                </div>
-            </li>
-            <li class="grid-card__item">
-                <img src="./image/домбай.3.png" class="grid-card__img" alt="Изображение карточки">
-                <div class="grid-card__wrapper">
-                    <h3 class="grid-card__text">Домбай</h3>
-                    <button class="grid-card__like" type="button"></button>
-                </div>
-                </div>
-            </li>
-            <li class="grid-card__item">
-                <img src="./image/эльбрус.2.png" class="grid-card__img" alt="Изображение карточки">
-                <div class="grid-card__wrapper">
-                    <h3 class="grid-card__text">Гора Эльбрус</h3>
-                    <button class="grid-card__like" type="button"></button>
-                </div>
-                </div>
-            </li>
-            <li class="grid-card__item">
-                <img src="./image/карачаево.1.jpg" class="grid-card__img" alt="Изображение карточки">
-                <div class="grid-card__wrapper">
-                    <h3 class="grid-card__text">Карачаевск</h3>
-                    <button class="grid-card__like" type="button"></button>
-                </div>
-                </div>
-            </li>
         </ul>
     </main>
 
@@ -84,8 +36,8 @@
 
     <div class="popup">
         <div class="popup__container">
-                <button class="form__close-button" type="button"></button>
-        
+            <button class="form__close-button" type="button"></button>
+
             <div class="form__contact-info">
                 <h2 class="form__title">Редактировать профиль</h2>
                 <form class="form" action="#" name="form">
@@ -96,6 +48,32 @@
             </div>
         </div>
     </div>
+
+    <div class="popup popup__add-img">
+        <div class="popup__container">
+            <button class="form__close-button" type="button"></button>
+
+            <div class="form__new-item">
+                <h2 class="form__title">Новое место</h2>
+                <form class="form" action="#" name="form">
+                    <input type="text" name="name" class="form__item-name" placeholder="Название">
+                    <input type="text" name="url" placeholder="Ссылка на картинку" class="form__link-img">
+                    <button type="submit" class="form__submit">Создать</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="popup popup__big-pic">
+        <div class="popup__container popup__container_background">
+            <button class="form__close-button" type="button"></button>
+
+            <img class="popup__img-big" src="" alt="Увеличенное изображение карточки">
+            <h3 class="popup__title"></h3>
+        </div>
+    </div>
+
+
 
     <script src="./script/index.js"></script>
 
