--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup">
+    <div class="popup popup__profile">
         <div class="popup__container">
             <form class="form" action="#" name="form">
                 <div class="form__contact-info">
