--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup popup__profile">
+    <div class="popup popup_profile">
         <div class="popup__container">
+            <button class="popup__close-button" type="button"></button>
             <form class="form" action="#" name="form">
                 <div class="form__contact-info">
                     <h2 class="form__title">Редактировать профиль</h2>
@@ -43,13 +44,13 @@
                 <input type="text" name="name" value="Жак-Ив Кусто" class="form__contact-name">
                 <input type="text" name="interst" value="Исследователь океана" class="form__contact-interst">
                 <button type="submit" class="form__submit">Сохранить</button>
-                <button class="form__close-button" type="button"></button>
             </form>
         </div>
     </div>
 
-    <div class="popup popup__add-img">
+    <div class="popup popup_add-img">
         <div class="popup__container">
+            <button class="popup__close-button" type="button"></button>
             <form class="form" action="#" name="form">
                 <div class="form__new-item">
                     <h2 class="form__title">Новое место</h2>
@@ -57,14 +58,13 @@
                 <input type="text" name="name" class="form__item-name" placeholder="Название">
                 <input type="text" name="url" placeholder="Ссылка на картинку" class="form__link-img">
                 <button type="submit" class="form__submit">Создать</button>
-                <button class="form__close-button" type="button"></button>
             </form>
         </div>
     </div>
 
-    <div class="popup popup__big-pic">
+    <div class="popup popup_big-pic">
         <div class="popup__container popup__container_background">
-            <button class="form__close-button" type="button"></button>
+            <button class="popup__close-button" type="button"></button>
             <img class="popup__img-big" src="" alt="Увеличенное изображение карточки">
             <h3 class="popup__title"></h3>
         </div>
