сделать валидацию формы

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <div class="form__contact-info">
                     <h2 class="form__title">Редактировать профиль</h2>
                 </div>
-                <input type="text" id="name-input" name="name" class="form__input form__contact-name" 
-                placeholder="Имя" minlength="2" maxlength="40" required>
+                <input type="text" id="name-input" name="name" class="form__input form__contact-name" placeholder="Имя"
+                    minlength="2" maxlength="40" required>
                 <span class="popup__input-error" id="name-input-error"></span>
                 <input type="text" id="interst-input" name="interst" placeholder="О себе"
                     class="form__input form__contact-interst" minlength="2" maxlength="200" required>
