сделать валидацию формы

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h2 class="form__title">Новое место</h2>
                 </div>
                 <input type="text" id="title-input" name="name" class="form__input form__item-name"
-                    placeholder="Название" minlength="2" maxlength="40" required>
+                    placeholder="Название" required>
                 <span class="popup__input-error" id="title-input-error"></span>
                 <input type="url" id="link-input" name="url" class="form__input form__link-img"
                     placeholder="Ссылка на картинку" required>
