--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             </div>
             <button class="profile__button-add" type="button"></button>
         </section>
-
-        <ul class="grid-card">
-        </ul>
+        <section class="cards-container">             
+        </section>
     </main>
 
     <footer class="footer">
@@ -41,11 +40,9 @@
                 <div class="form__contact-info">
                     <h2 class="form__title">Редактировать профиль</h2>
                 </div>
-                <input type="text" id="name-input" name="name" class="form__input form__contact-name" placeholder="Имя"
-                    minlength="2" maxlength="40" required>
+                <input type="text" id="name-input" name="name" class="form__input form__contact-name" placeholder="Имя" minlength="2" maxlength="40" required>
                 <span class="popup__input-error" id="name-input-error"></span>
-                <input type="text" id="interst-input" name="interst" placeholder="О себе"
-                    class="form__input form__contact-interst" minlength="2" maxlength="200" required>
+                <input type="text" id="interst-input" name="interst" placeholder="О себе" class="form__input form__contact-interst" minlength="2" maxlength="200" required>
                 <span class="popup__input-error" id="interst-input-error"></span>
                 <button type="submit" class="form__submit form__submit_disabled">Сохранить</button>
                 <button class="popup__close-button" type="button"></button>
@@ -60,11 +57,9 @@
                 <div class="form__new-item">
                     <h2 class="form__title">Новое место</h2>
                 </div>
-                <input type="text" id="title-input" name="name" class="form__input form__item-name"
-                    placeholder="Название" minlength="1" maxlength="30" required>
+                <input type="text" id="title-input" name="name" class="form__input form__item-name" placeholder="Название" minlength="1" maxlength="30" required>
                 <span class="popup__input-error" id="title-input-error"></span>
-                <input type="url" id="link-input" name="url" class="form__input form__link-img"
-                    placeholder="Ссылка на картинку" required>
+                <input type="url" id="link-input" name="url" class="form__input form__link-img" placeholder="Ссылка на картинку" required>
                 <span class="popup__input-error" id="link-input-error"></span>
                 <button type="submit" class="form__submit form__submit_disabled">Создать</button>
                 <button class="popup__close-button" type="button"></button>
@@ -80,9 +75,21 @@
         </div>
     </div>
 
-    <script src="./script/index.js"></script>
+    <template id="card-template">
+        <article class="grid-card">
+            <button class="grid-card__del" type="button"></button>
+            <img src="" class="grid-card__img" alt="Изображение карточки">
+            <div class="grid-card__wrapper">
+                <h3 class="grid-card__text">Камчатка</h3>
+                <button class="grid-card__like"></button>
+            </div>
+        </article>
+    </template>
+
+
     <script src="./script/initial-cards.js"></script>
     <script src="./script/validate.js"></script>
+    <script src="./script/index.js"></script>
 
 </body>
 
