--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <div class="popup popup_profile">
         <div class="popup__container">
 
-            <form class="form" action="#" name="form" novalidate>
+            <form class="form" action="#" name="form-edit" novalidate>
                 <div class="form__contact-info">
                     <h2 class="form__title">Редактировать профиль</h2>
                 </div>
-                <input type="text" id="name-input" name="name" class="form__input form__contact-name" placeholder="Имя"
+                <input type="text" id="name-input" name="contact-name" class="form__input form__contact-name" placeholder="Имя"
                     minlength="2" maxlength="40" required>
                 <span class="popup__input-error" id="name-input-error"></span>
                 <input type="text" id="interst-input" name="interst" placeholder="О себе"
@@ -55,11 +55,11 @@
     <div class="popup popup_add-img">
         <div class="popup__container">
 
-            <form class="form" action="#" name="form" novalidate>
+            <form class="form" action="#" name="form-add" novalidate>
                 <div class="form__new-item">
                     <h2 class="form__title">Новое место</h2>
                 </div>
-                <input type="text" id="title-input" name="name" class="form__input form__item-name"
+                <input type="text" id="title-input" name="item-name" class="form__input form__item-name"
                     placeholder="Название" minlength="1" maxlength="30" required>
                 <span class="popup__input-error" id="title-input-error"></span>
                 <input type="url" id="link-input" name="url" class="form__input form__link-img"
