сделал попап абновить аватар

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
             <form class="form" action="#" name="popup__form_profile" novalidate>
                 <div class="form__new-item">
-                    <h2 class="form__title">Обновить аватар</h2>
+                    <h2 class="form__title form__title_edit-avatar">Обновить аватар</h2>
                 </div>
                 <input type="url" id="link-input" name="link" class="form__input form__input_link"
                     placeholder="Ссылка на изображение" required>
