--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
         </div>
     </div>
 
-    
-    <div class="popup popup_edit-avatar popup_opened">
+
+    <div class="popup popup_edit-avatar">
         <div class="popup__container">
 
             <form class="form" action="#" name="popup__form_profile" novalidate>
