--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style/index.css">
+    <link rel="stylesheet" type="text/css" href="./pages/index.css">
     <title>Mesto.Russia</title>
 </head>
 
@@ -90,7 +90,7 @@
         </article>
     </template>
 
-    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
 
 </body>
 
