весь функциона работает

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                 <input type="text" id="name-input" name="name" class="form__input form__contact-name" placeholder="Имя"
                     minlength="2" maxlength="40" required>
                 <span class="popup__input-error" id="name-input-error"></span>
-                <input type="text" id="interst-input" name="interst" placeholder="О себе"
+                <input type="text" id="interst-input" name="about" placeholder="О себе"
                     class="form__input form__contact-interst" minlength="2" maxlength="200" required>
                 <span class="popup__input-error" id="interst-input-error"></span>
                 <button type="submit" class="form__submit form__submit_disabled">Сохранить</button>
